# new_practice

./: README.md  song.txt
practice1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  student.h  test_main.cpp
practice1/.qtcreator/: CMakeLists.txt.user.ecb9702
practice2/: CMakeLists.txt  gameboard.cpp  gameboard.h  main.cpp  mainwindow.cpp  mainwindow.h  puzzlepiece.h  tst_puzzle.cpp
